--- a/.github/workflows/ksocguard.yml
+++ b/.github/workflows/ksocguard.yml
@@ -15,6 +15,4 @@ jobs:
         uses: ksoclabs/guard-action@v0.0.9
         with:
           fail_on_severity: none
-          ksoc_account_id: 2KW0CKZCYADZH5AL7TuFyoaIlvh
-          ksoc_access_key_id: ${{ secrets.KSOC_ACCESS_KEY_ID }}
-          ksoc_secret_key: ${{ secrets.KSOC_SECRET_KEY }}
+          policy_dir: /policies
