--- a/config/service.yml
+++ b/config/service.yml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: dvwa-app-service
+  name: dvwa-app-service-r
   namespace: dvwa
 spec:
   selector:
-    app: dvwa-app
+    app: dvwa-app-r
     tier: frontend
   type: LoadBalancer
   ports:
